cmake_minimum_required(VERSION 2.8)

PROJECT(server)
FIND_PACKAGE(Qt4 REQUIRED)

SET(QT_USE_QTNETWORK TRUE)
SET(QT_USE_QTSQL     TRUE)

ADD_DEFINITIONS(-W)
ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-g)
ADD_DEFINITIONS(-pg)

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src SERVER_SRC)
AUX_SOURCE_DIRECTORY(src/db SERVER_SRC)
SET(SERVER_HEADER
  include/tcpserver.hpp
  )

QT4_WRAP_CPP(SERVER_HEADER_MOC ${SERVER_HEADER})
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_EXECUTABLE(server ${SERVER_SRC} ${SERVER_HEADER_MOC})
TARGET_LINK_LIBRARIES(server ${QT_LIBRARIES} -pg)
